--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,11 @@ before_script:
   - export DISTRO_CODENAME=`lsb_release -cs` && echo Using distro $DISTRO_CODENAME
 
 variables:
-  GET_SOURCES_ATTEMPTS: 3
+  GET_SOURCES_ATTEMPTS: "3"
 
-#############
-# Templates
-#############
+#########################
+# Templates using anchors
+#########################
 .amd64_trusty_t: &amd64_trusty_job
   image: registry.roboception.de/tools/docker_images:indigo-perception-pcl
   tags:
@@ -84,6 +84,8 @@ variables:
   extends: .package
   only:
     - master
+  except:
+    - tags
   variables:
     TESTING_DEBS: "true"
     APT_REPO: "testing"
@@ -100,28 +102,68 @@ variables:
 ##############
 #### Jobs ####
 ##############
+gen_dox:
+  <<: *amd64_bionic_job
+  variables:
+    TESTING_DEBS: "true"
+  stage: deploy
+  script:
+    - apt-get install -y doxygen ncftp ros-${ROS_DISTRO}-rosdoc-lite
+    - rosdoc_lite .
+    - upload_dox.sh doc/html
+  only:
+    - master
+    - tags
+  tags:
+    - docs
 
-# Test(on every commit)
-#######################
+################
+# Testing builds
+################
+
+# Test against latest (on every commit)
+#######################################
 test:trusty:amd64:
   <<: *amd64_trusty_job
-  extends: .test
+  extends: .test_latest
 
 test:trusty:armhf:
   <<: *armhf_trusty_job
-  extends: .test
+  extends: .test_latest
 
 test:xenial:amd64:
   <<: *amd64_xenial_job
-  extends: .test
+  extends: .test_latest
 
 test:xenial:armhf:
   <<: *armhf_xenial_job
-  extends: .test
+  extends: .test_latest
 
 test:bionic:amd64:
   <<: *amd64_bionic_job
-  extends: .test
+  extends: .test_latest
+
+# Test against stable (is allowed to fail)
+##########################################
+test_stable:trusty:amd64:
+  <<: *amd64_trusty_job
+  extends: .test_stable
+
+test_stable:trusty:armhf:
+  <<: *armhf_trusty_job
+  extends: .test_stable
+
+test_stable:xenial:amd64:
+  <<: *amd64_xenial_job
+  extends: .test_stable
+
+test_stable:xenial:armhf:
+  <<: *armhf_xenial_job
+  extends: .test_stable
+
+test_stable:bionic:amd64:
+  <<: *amd64_bionic_job
+  extends: .test_stable
 
 # Deploy testing (only on master)
 #################################
@@ -144,6 +186,32 @@ package_testing:xenial:armhf:
 package_testing:bionic:amd64:
   <<: *amd64_bionic_job
   extends: .package_testing
+
+################
+# Stable builds
+################
+
+# Test against stable if it is a release
+########################################
+test_release:trusty:amd64:
+  <<: *amd64_trusty_job
+  extends: .test_release
+
+test_release:trusty:armhf:
+  <<: *armhf_trusty_job
+  extends: .test_release
+
+test_release:xenial:amd64:
+  <<: *amd64_xenial_job
+  extends: .test_release
+
+test_release:xenial:armhf:
+  <<: *armhf_xenial_job
+  extends: .test_release
+
+test_release:bionic:amd64:
+  <<: *amd64_bionic_job
+  extends: .test_release
 
 # Deploy stable (only for releases, version tags)
 #################################################
