--- a/package.xml
+++ b/package.xml
@@ -14,4 +14,6 @@
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <depend>std_msgs</depend>
+
 </package>
