--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  CameraParams.msg
+  CameraParam.msg
   KeyValue.msg
   ReturnCode.msg
   ReturnCodeConstants.msg
