--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,12 @@ variables:
     - armhf
     - docker
 
+.amd64_focal_t: &amd64_focal_job
+  image: ros:noetic-perception
+  tags:
+    - amd64
+    - docker
+
 #############
 # Templates
 #############
@@ -144,6 +150,10 @@ test:bionic:armhf:
   <<: *armhf_bionic_job
   extends: .test_latest
 
+test:focal:amd64:
+  <<: *amd64_focal_job
+  extends: .test_latest
+
 # Test against stable (is allowed to fail)
 ##########################################
 test_stable:trusty:armhf:
@@ -166,6 +176,10 @@ test_stable:bionic:armhf:
   <<: *armhf_bionic_job
   extends: .test_stable
 
+test_stable:focal:amd64:
+  <<: *amd64_focal_job
+  extends: .test_stable
+
 # Deploy testing (only on master)
 #################################
 package_testing:trusty:armhf:
@@ -186,6 +200,10 @@ package_testing:bionic:amd64:
 
 package_testing:bionic:armhf:
   <<: *armhf_bionic_job
+  extends: .package_testing
+
+package_testing:focal:amd64:
+  <<: *amd64_focal_job
   extends: .package_testing
 
 ################
@@ -214,6 +232,10 @@ test_release:bionic:armhf:
   <<: *armhf_bionic_job
   extends: .test_release
 
+test_release:focal:amd64:
+  <<: *amd64_focal_job
+  extends: .test_release
+
 # Deploy stable (only for releases, version tags)
 #################################################
 package_stable:trusty:armhf:
@@ -234,4 +256,8 @@ package_stable:bionic:amd64:
 
 package_stable:bionic:armhf:
   <<: *armhf_bionic_job
+  extends: .package_stable
+
+package_stable:focal:amd64:
+  <<: *amd64_focal_job
   extends: .package_stable
